# linkedinbot-react

./: .gitignore  README.md  dev-app-update.yml  electron-builder.yml  package.json  pnpm-lock.yaml
src/main/: index.ts
src/python/: README.md  pyproject.toml
src/python/src/linkedinbot/: script.py
src/renderer/: index.html
src/renderer/src/: App.tsx  main.tsx
src/renderer/src/components/: python-trigger.tsx
